--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -74,13 +74,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor\ActorModel.cs" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor\Post.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="ErrorModel.cs" />
     <Compile Include="Genre\GenreModel.cs" />
     <Compile Include="Genre\Post.cs" />
+    <Compile Include="MovieActor\MovieActorModel.cs" />
+    <Compile Include="MovieActor\Post.cs" />
+    <Compile Include="Movie\MovieDetailedModel.cs" />
     <Compile Include="Movie\Post.cs" />
     <Compile Include="Movie\MovieSimpleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,6 +110,7 @@
       <LastGenOutput>ErrorCodes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
